// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallButton should renders default 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.span>
    Remove
  </styled.span>
</styled.div>
`;

exports[`SmallButton should renders in disable 1`] = `
<styled.div
  isDisabled={true}
  onClick={null}
>
  <styled.span
    isDisabled={true}
  >
    Remove
  </styled.span>
</styled.div>
`;
